# language-scrapyard

./: Cargo.toml  README.md
codespan_stlc/: README.md
codespan_stlc/src/: core.rs  main.rs
datalog/src/: datalog.rs  main.rs
elab_algebraic_datatypes/: Cargo.toml  README.md
elab_algebraic_datatypes/src/: core.rs  main.rs  prim.rs  surface.rs
elab_dep_recs/: Cargo.toml  README.md
elab_dep_recs/src/: core.rs  main.rs  parser.lalrpop  surface.rs  test.rs  util.rs
elab_dep_recs/src/core/: library.rs  matcher.rs
elab_dependent/: Cargo.toml
elab_dependent/src/: core.rs  elab_dependent.rs  main.rs  surface.rs  util.rs
elab_stlc_bidirectional/: Cargo.toml
elab_stlc_bidirectional/src/: main.rs
elab_stlc_codespan/: Cargo.toml
elab_stlc_codespan/src/: parse.rs  parser.lalrpop  surface.rs
elab_stlc_error_recovery/: Cargo.toml  README.md
elab_stlc_error_recovery/src/: core.rs  main.rs  parse.rs  surface.rs  util.rs
elab_system_f_bidirectional/: Cargo.toml
elab_system_f_bidirectional/src/: elab_system_f_bidirectional.rs  main.rs
lalrpop_whitespace/: Cargo.toml  README.md  build.rs
lalrpop_whitespace/src/: main.rs  parser.lalrpop  surface.rs
lc/src/: lc.rs
math/: Cargo.toml  README.md
math/src/: loc_math.rs  loc_parser.lalrpop  (+2 more)
pattern_matching/: Cargo.toml
peg_precedence/: Cargo.toml
peg_remove_left_recursion/: Cargo.toml
src/: datalog.rs  elab_stlc_bidirectional.rs  elab_system_f_bidi.rs  main.rs  math.rs  stlc_bidirectional.rs  system_f_bidi.rs  topl_imperative.rs  ucs.rs  util.rs
topl_imperative/: Cargo.toml
ucs/: Cargo.toml
(+20 files in other folders)
